# jenkpi_tasktracker

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
src/: config.py  database.py  main.py  repository.py  routers.py  schemas.py
src/celery_overdues/: celery_init.py  celery_scan.py
src/mappers/: mappers.py
src/models/: task_models.py
src/pampers/: pampers.py
src/repository/: repository.py
src/routers/: task_routers.py
src/schemas/: task_schemas.py
src/services/: tasks_services.py
src/sqlalchemy_orm_models/: sqlalchemy_orm_task_models.py
tests/data/test_routers/: all_tasks_in.json  all_tasks_out.json
tests/test_data_parsers/: test_data_parsers.py
tests/unit_tests/test_mappers/: test_mappers.py
tests/unit_tests/test_routers/: conftest.py  test_task_routers.py
